# winslow

./: pyproject.toml
src/winslow/: __init__.py
