[project]
name = "winslow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "ocanbascil@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "networkx>=3.4.2",
    "textual>=0.85.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=24.10.0",
    "flake8>=7.1.1",
    "pytest>=8.3.3",
]
